2010-06-07 yusei
* Remove short title.

2009-11-08 Rafael
* added Script for getMessageList from DummyMailHost

2009-04-20 Kazuhiko
* add Zuite_CommonTemplate that should a common template for all functional tests.
* add TestTool_getSkinName and TestTool_setSkinNameCookie so as to unify functional tests for normal skin and mobile skin.

2009-02-03 Kazuhiko
* define getAbsoluteLocation() in user-extensions.js for compatible with Zelenium based of Selenium 0.8 or later.

2008-10-01 fabien
* initial version