@@ -1,3 +1,6 @@
+2011-11-01 Cedric
+* Add phantomRender Selenium user extension.
+
 2010-06-07 yusei
 * Remove short title.
 
